2004-06-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/controller.py (FeedManager.feedReady): Add
	silly FIXME

	* flumotion/server/streamer.py: Support client connecting logging,
	including number of bytes sent to each client.

	* flumotion/server/launcher.py: Start adding nice levels.

	* flumotion/gui/adminclient.py (Window.update): Clean up

2004-06-25  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/streamer.py: New streamers and stuff

	* flumotion/server/admin.py (RemoteComponentView.__cmp__):
	Implement, check only name attribute for now

	* flumotion/gui/adminclient.py
	(AdminInterface.remote_componentAdded): Make it somewhat work to
	reconnect component and add some new columns

	* data/ui/admin.glade: Remove textview for now

2004-06-24  Johan Dahlin  <johan@gnome.org>

	* conf/complex.conf: New configuration, in preparation
	for guadec.

	* conf/ogg-test-theora-vorbis.conf: Move encoding of audio and
	video to separate components.

	* conf/camserv-relay.conf: Add a file streamer

	* flumotion/server/controller.py
	(ComponentPerspective.callRemote): Catch DeadReferenceError's

	* flumotion/server/launcher.py: updates for file/http streaming

	* flumotion/server/streamer.py (FileSinkStreamer): New streamer
	(FakeSinkStremaer): Old, renamed.

	* flumotion/gui/adminclient.py: Small updates

	* flumotion/utils/gstutils.py (is_port_free): Don't print socket
	errors which makes us all very nervous. 

2004-06-22  Johan Dahlin  <johan@gnome.org>

	* flumotion/utils/gstutils.py (verbose_deep_notify_cb): Log the
	component name aswell

	* bin/video-server-admin.in: Script to run the admin interface.

	* flumotion/server/*: Cleanup callbacks, always prefix twisted
	callbacks with cb_.
	
2004-06-20  Johan Dahlin  <johan@gnome.org>

	* flumotion/utils/gstutils.py (verbose_deep_notify_cb): Filter out
	active notifies and empty caps. Thomas will probably kill me for
	this.

	* flumotion/server/*: Better error checking, make exception be