@@ -1,0 +1,14 @@
+[global]
+username=jdahlin
+
+[sine]
+kind=producer
+pipeline=sinesrc sync=1
+nice=-10
+
+[logger]
+kind=streamer
+source=sine
+protocol=http
+port=8800
+logfile=/tmp/clients-sine.log
