@@ -1,3 +1,10 @@
+2004-06-27  Johan Dahlin  <johan@gnome.org>
+
+	* flumotion/server/launcher.py (main): Add support for setuid to a
+	username and renice.
+
+	* conf/sine-disc.conf (sine): Add nice for testing
+
 2004-06-26  Johan Dahlin  <johan@gnome.org>
 
 	* flumotion/server/controller.py (FeedManager.feedReady): Add
